--- a/ecommerce-angular/shop/src/app/components/checkout/checkout.component.css
+++ b/ecommerce-angular/shop/src/app/components/checkout/checkout.component.css
@@ -1,159 +1,158 @@
-.title{
-    font-weight: bolder;
+.title {
+  font-weight: bolder;
 }
 
-hr{
-    background-color: rgb(148, 147, 147);
+hr {
+  background-color: rgb(148, 147, 147);
 }
 
-.container{
-    margin-bottom: 1000px;
+.container {
+  margin-bottom: 1000px;
 }
 
-.checkout-section{
-    width: 100%;
+.checkout-section {
+  width: 100%;
 }
 
-.product-image{
-    width: 150px;
-    height: 150px;
+.product-image {
+  width: 150px;
+  height: 150px;
 }
 
-.total-section{
-    position: fixed;
-    left: 70%;
+.total-section {
+  position: fixed;
+  left: 70%;
 }
 
-.section, .billing-address, .shipping-section{
-    font-size: 25px;
-    font-weight: 500;
+.section,
+.billing-address,
+.shipping-section {
+  font-size: 25px;
+  font-weight: 500;
 }
 
-tr{
-    border-color: rgb(245, 244, 244);
+tr {
+  border-color: rgb(245, 244, 244);
 }
 
-.btn-promo{
-    color: white;
-    background-color: #7367F0 !important;
+.btn-promo {
+  color: white;
+  background-color: #7367f0 !important;
 }
 
-.btn-fail{
-    color: white;
-    background-color: #ee5c5c !important;
-    border-color: #ee5c5c !important;
+.btn-fail {
+  color: white;
+  background-color: #ee5c5c !important;
+  border-color: #ee5c5c !important;
 }
 
-.btn-promo:hover{
-    background-color: #5548e9 !important;
+.btn-promo:hover {
+  background-color: #5548e9 !important;
 }
 
-.order-info{
-    background-color: rgb(245, 244, 244);
-    border-color: rgb(245, 244, 244);
-
+.order-info {
+  background-color: rgb(245, 244, 244);
+  border-color: rgb(245, 244, 244);
 }
 
-.card{
-    border-color: rgb(245, 244, 244);
-
+.card {
+  border-color: rgb(245, 244, 244);
 }
 
-.btn-complete{
-    color: white;
-    background-color: #7367F0 !important;
+.btn-complete {
+  color: white;
+  background-color: #7367f0 !important;
 
-    border-color: #7367F0 !important;
-
+  border-color: #7367f0 !important;
 }
 
-.btn-add{
-    /* transform: translateX(-4px); */
-    width: 100px;
-    background-color: white;
-    color: #574aee;
-    border-color: #574aee !important;
-    /* transition: .2s ease-in-out; */
+.btn-add {
+  /* transform: translateX(-4px); */
+  width: 100px;
+  background-color: white;
+  color: #574aee;
+  border-color: #574aee !important;
+  /* transition: .2s ease-in-out; */
 }
 
-.btn-add:hover{
-    color: white;
-    background-color: #574aee !important;
-    transition: .1s ease-in-out;
-
+.btn-add:hover {
+  color: white;
+  background-color: #574aee !important;
+  transition: 0.1s ease-in-out;
 }
 
-.faHeart{
-    color: rgb(88, 88, 88);
+.faHeart {
+  color: rgb(88, 88, 88);
 }
 
-.shadow-sm{
-    /* border-color: #574aee !important; */
+.mv-fav:hover {
+  font-size: 17px;
+  transition: 0.1s ease-in-out;
+  cursor: pointer;
 }
 
-.mv-fav:hover{
-    font-size: 17px;
-    transition: .1s ease-in-out;
-    cursor: pointer;
+.cc-form {
+  animation: appear 0.4s forwards;
 }
 
-.cc-form{
-    animation: appear .4s forwards;
+.invalidCoupon {
+  animation: appear 0.2s ease-in-out;
 }
 
-.invalidCoupon{
-    animation: appear .2s ease-in-out;
+.product-image {
+  margin-right: 0;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
 }
 
-.product-image{
-    margin-right: 0;
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
+.item-size,
+.item-color {
+  font-weight: normal;
+  font-size: 15px;
 }
 
-.item-size, .item-color{
-    font-weight: normal;
-    font-size: 15px;
+.change-address {
+  cursor: pointer;
 }
 
-.change-address{
-    cursor: pointer;
+.list-group-item {
+  border: none;
 }
 
-.list-group-item{
-    border: none;
+.remove-coupon {
+  color: #574aee !important;
+  text-decoration: underline;
 }
 
-.remove-coupon{
-    color: #574aee !important;
-    text-decoration: underline;
-}
-
-.remove-coupon:hover{
-    cursor: pointer;
+.remove-coupon:hover {
+  cursor: pointer;
 }
 
 @keyframes appear {
-    0%{
-        opacity: 10%;
-    }
-    50%{
-        opacity: 50%;
-    }
-    100%{
-        opacity: 100%;
-    }
+  0% {
+    opacity: 10%;
+  }
+  50% {
+    opacity: 50%;
+  }
+  100% {
+    opacity: 100%;
+  }
 }
 
-.modal-dialog{
-    max-width: 800px;
+.modal-dialog {
+  max-width: 800px;
 }
 
-.paypal-button{
-    width: 100% !important;
+.paypal-button {
+  width: 100% !important;
 }
 
-#amount{
-    font-size: 18px;
+#amount {
+  font-size: 18px;
+}
+
+.product-page-link {
+  color: black;
 }
